logging_monitoring/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service

spec:
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
