logging_monitoring/influxdb/influxdb-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-ingress
  namespace: monitoring

spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/influxdb`)
      kind: Rule
      services:
        - name: influxdb-service
          port: 8086
          namespace: monitoring
      middlewares:
        - name: influxdb-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: influxdb-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /influxdb
